# RadioFed

./: .gitignore  CHANGES.md  Diagnostic.py  LICENSE  README.md  amc-rml2016a-updated.ipynb  diagnose_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
central/: aggregator.py  config.json  dashboard.py  main.py  metrics_history.json  model.py  server.py  state.py  utils.py  visualization.py
client/: config.json  dataset_loader.py  feature_extract.py  main.py  model.py  requirements.txt  state.py  sync.py  train.py  visualization.py
client/local/: metrics.json
client/models/: __init__.py  cnn_model.py  mlp_model.py  traditional_models.py
data/: README.md  partition_dataset.py
tests/: INTEGRATION_TEST_SUMMARY.md  test_aggregator.py  test_dashboard_metrics.py  test_dataset_loader.py  test_e2e_workflow.py  test_feature_extract.py  test_integration_amc.py  test_multi_client_simulation.py  test_server.py  test_sync.py  test_train.py
