[project]
name = "federated-learning-system"
version = "0.1.0"
description = "Federated Learning System with Central Server and Client Nodes - KNN Only"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "scipy>=1.10.1",
    "joblib>=1.4.2",
    "scikit-learn>=1.3.2",
    "threadpoolctl>=3.5.0",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "pandas>=2.0.3",
]

[project.scripts]
central-server = "central.main:main"
client = "client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["central"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
